fixtures/cs-enc-01/good/no-cipher-calls.ts
export function encrypt(data: Buffer) {
	return data;
}
